src/objects/Agent_Patient_Eligibility__c.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipName>Agent_Patient_Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedToPatient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssignedToPatient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipName>Agent_Patient_Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Patient Agent Eligibility</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Agent Patient Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Agent Eligibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>